// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with some more text 1`] = `
<div>
  <figure
    style="display: flex; flex-direction: column;"
  >
    <img
      alt="Tilfeldig bilde fra picsum"
      data-nimg="1"
      decoding="async"
      height="200"
      loading="lazy"
      src="https://picsum.photos/id/237/300/200?w=640&q=75"
      srcset="https://picsum.photos/id/237/300/200?w=384&q=75 1x, https://picsum.photos/id/237/300/200?w=640&q=75 2x"
      style="color: transparent;"
      title="Æ Å"
      width="300"
    />
    <figcaption>
      Dette er en test
    </figcaption>
  </figure>
</div>
`;

exports[`Standard render 1`] = `
<div>
  <figure
    style="display: flex; flex-direction: column;"
  >
    <img
      alt=""
      data-nimg="1"
      decoding="async"
      height="250"
      loading="lazy"
      src="https://picsum.photos/id/237/100/100.jpg?w=828&q=75"
      srcset="https://picsum.photos/id/237/100/100.jpg?w=640&q=75 1x, https://picsum.photos/id/237/100/100.jpg?w=828&q=75 2x"
      style="color: transparent;"
      title=""
      width="400"
    />
  </figure>
</div>
`;
